@startuml natural_transformation

!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml

hide empty members

note "F, G extend WitnessArity<?>" as ArityNote

interface "Natural<F, G>" <<functional interface>> {
  + <A> Kind<G, A> apply(Kind<F, A> fa)
  + <H> Natural<F, H> andThen(Natural<G, H> after)
  + <E> Natural<E, G> compose(Natural<E, F> before)
  + {static} <F> Natural<F, F> identity()
}

note right of "Natural<F, G>"
  Polymorphic function
  between type constructors.

  F[A] ──Natural──> G[A]

  Works for ANY type A.
end note

interface "Functor<F>" <<interface>>
interface "Functor<G>" <<interface>>

"Natural<F, G>" ..> "Functor<F>" : operates on
"Natural<F, G>" ..> "Functor<G>" : produces

note bottom of "Natural<F, G>"
  **Naturality Law:**
  nat.apply(functorF.map(f, fa))
    == functorG.map(f, nat.apply(fa))
end note

@enduml
